--- a/react-app/index.html
+++ b/react-app/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Quiz App - Frontend</title>
+    <link rel="icon" type="image/svg+xml" href="/assets/Quizlabs-Icon-Text.svg" />
+    <title>Quiz Labs</title>
     <script src="https://accounts.google.com/gsi/client?hl=en" async defer></script>
   </head>
   <body>
